# edu-chess

./: .ghci  README.md  chess.cabal
exe/: chess.hs
src/chess/: Chess.hs
src/internal/: Board.hs  Color.hs  Game.hs  Internal.hs  Moves.hs  Piece.hs  Sq.hs  Zobrist.hs
src/players/: Players.hs
